--- a/emperor.html
+++ b/emperor.html
@@ -1,13 +1,16 @@
-<span id="a">Rik Vervoort@computer</span>:<span id="b">~</span><span id="c"></span>$ cd Rik Vervoort/About_Me
-<span id="a">Rik Vervoort@computer</span>:<span id="b">~</span><span id="c">/Rik Vervoort/About_Me</span>$ cat CV_Rik Vervoort.txt<br/><br/>
-"<span id="k">Hey there, nice to see you here.</span>"
+<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c"></span>$ cd Rik Vervoort/About_Me
+<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Rik Vervoort/About_Me</span>$ cat CV_Rik Vervoort.txt<br/><br/>
+"<span id="k">Hey there champ! Nice to see you here.</span>"
 
-My Name Is Rik.<p>Welcome</p>
-<p>I am a Computer Engineer, you can checkout my resume here. <a href="https://drive.google.com/file/d/1tG3HLptcBBmwqXVbE3J89SM9FsZIVOIP/view?usp=sharing"> Resume</a></p>
-<p>I usally waste my time doing cool projects.<br><br><br>You can checkout my projects on my resume, but if you want to get connect You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br>
+My Name Is Rik Vervoort.<p>Welcome</p>
+<p>I'm a Online Marketeer, One of my clients was <a href="https://teams.gg"> TEAMS.gg</a> a client I 💜 working for.</p>
+<p>It was Mutual🤗: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
+<p>Build <a href="http://tinyurl.com/542yab44"> 25k monthly organic search traffic</a> through strong SEO fundamentals and blog posts, Google Search Ads CPA $0.14, Youtube Ads CPA $0.25, Grew their <a href="http://discord.gg/teamsgg"> Discord Community</a> from 5k to 30k</p>
+<p><a href="https://lootlabs.xyz"> Lootlabs Inc</a></p> <a href="https://boxed.gg"> boxed.gg</a></p>
+<p>I usally waste my time doing cool projects.<br><br><br>If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br>
 </p>
 
 You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.
 
 <p>Cheers!</p>
-<span id="a">Rik Vervoort@computer</span>:<span id="b">~</span><span id="c">/Rik Vervoort/About_Me</span>$ 
+<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Driving Businesses Growth Through Strategic Online Marketing Campaigns</span>
