--- a/emperor.html
+++ b/emperor.html
@@ -3,8 +3,22 @@
 "<span id="k">Hey there champ! Nice to see you here.</span>"
 
 My Name Is Rik Vervoort.<p>Welcome</p>
-<p>I'm a Online Marketeer, One of my clients was <a href="https://teams.gg"> TEAMS.gg</a> a client I 💜 working for.</p>
-<p>It was Mutual🤗: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
+<p>I'm a Online Marketeer.</p>
+<p>I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>
+<p>✓ Analytics & Data
+    Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.
+</p>
+<p>✓ Cross Platform Advertising
+    Implement multi-channel advertising strategies across platforms such as Google, TikTok, Instagram, Facebook, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
+</p>
+<p>✓ Part of your team
+    Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
+
+Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.
+</p>
+<p>Stuff I Did: <a href="https://teams.gg"> TEAMS.gg</a> a client I 💜ed working for.</p>
+<p>Review: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
+<p>A little glimps of what i did at TEAMS.gg:</p>
 <p>Build <a href="http://tinyurl.com/542yab44"> 25k monthly organic search traffic</a> through strong SEO fundamentals and blog posts, Google Search Ads CPA $0.14, Youtube Ads CPA $0.25, Grew their <a href="http://discord.gg/teamsgg"> Discord Community</a> from 5k to 30k</p>
 <p><a href="https://lootlabs.xyz"> Lootlabs Inc</a></p> <a href="https://boxed.gg"> boxed.gg</a></p>
 <p>I usally waste my time doing cool projects.<br><br><br>If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br>
