--- a/emperor.html
+++ b/emperor.html
@@ -2,13 +2,12 @@
 <span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Rik Vervoort/About_Me</span>$ cat CV_Rik Vervoort.txt<br/><br/>
 "<span id="k">Hey there champ! Nice to see you here.</span>"
 
-My Name Is Rik Vervoort.<p>Welcome</p>
-<p>I'm a Online Marketeer.</p>
+<p>My name is Rik Vervoort, I'm a Online Marketeer.</p>
 <p>I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>
 <p>✓ Analytics & Data
     Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.
 </p>
-<p>✓ Cross Platform Advertising
+"<span id="k">✓ Cross Platform Advertising</span>"<p>
     Implement multi-channel advertising strategies across platforms such as Google, TikTok, Instagram, Facebook, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
 </p>
 <p>✓ Part of your team
