--- a/emperor.html
+++ b/emperor.html
@@ -4,13 +4,13 @@
 
 <p>My name is Rik Vervoort, I'm a Online Marketeer.</p>
 <p>I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>
-<p>✓ Analytics & Data
+<span id="k">✓ Analytics & Data</span><p>
     Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.
 </p>
-"<span id="k">✓ Cross Platform Advertising</span>"<p>
+<span id="k">✓ Cross Platform Advertising</span><p>
     Implement multi-channel advertising strategies across platforms such as Google, TikTok, Instagram, Facebook, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
 </p>
-<p>✓ Part of your team
+<span id="k">✓ Part of your team</span><p>
     Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
 
 Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.
