--- a/emperor.html
+++ b/emperor.html
@@ -15,11 +15,14 @@
 
 Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.
 </p>
-<p>Stuff I Did: <a href="https://teams.gg"> TEAMS.gg</a> a client I 💜ed working for.</p>
-<p>Review: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
+
+<span id="k">CV - As Freelancer Marketeer.</span>
+<p>May 2022 - Present <a href="https://lootlabs.xyz"> Loot labs Inc</a> and have until now succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
+<p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” Millan Harris CEO - <a href="https://lootlabs.xyz"> Loot Labs Inc</a></p>
+<p>Mar 2022 - Apr 2023:<a href="https://teams.gg"> TEAMS.gg</a></p>
+<p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
 <p>Build <a href="http://tinyurl.com/542yab44"> 25k monthly organic search traffic</a> through strong SEO fundamentals and blog posts, Google Search Ads CPA $0.14, Youtube Ads CPA $0.25, Grew their <a href="http://discord.gg/teamsgg"> Discord Community</a> from 5k to 30k</p>
-<p>Currently I work for <a href="https://lootlabs.xyz"> Loot labs Inc</a> and have until now succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
-<p>Review: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” Millan Harris CEO - <a href="https://lootlabs.xyz"> Loot Labs Inc</a></p>
+
 <p>I usally waste my time doing cool projects.<br><br><br>If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br>
 </p>
 
