--- a/emperor.html
+++ b/emperor.html
@@ -17,7 +17,8 @@ Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to you
 </p>
 
 <span id="k">CV - Freelance Marketing.</span>
-<p>May 2022 - Present <a href="https://lootlabs.xyz"> Loot labs Inc</a> and have until now succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
+<p>May 2022 - Present:<a href="https://lootlabs.xyz">Loot labs Inc</a></p>
+<p>Until Now succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
 <p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” Millan Harris CEO - <a href="https://lootlabs.xyz"> Loot Labs Inc</a></p>
 <p>Mar 2022 - Apr 2023:<a href="https://teams.gg"> TEAMS.gg</a></p>
 <p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
