--- a/emperor.html
+++ b/emperor.html
@@ -1,5 +1,3 @@
-<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c"></span>$ cd Rik Vervoort/About_Me
-<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Rik Vervoort/About_Me</span>$ cat CV_Rik Vervoort.txt<br/><br/>
 "<span id="k">Hey there champ! Nice to see you here.</span>"
 
 <p>My name is Rik Vervoort, I'm a Online Marketeer.</p>
@@ -8,26 +6,20 @@
 Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.
 </p>
 <span id="k">✓</span> Cross Platform Advertising<p>
-Implement multi-channel advertising strategies across platforms such as Google, TikTok, Instagram, Facebook, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
+I advertise on platforms such as Google, TikTok, Meta, X, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
 </p>
 <span id="k">✓</span> Part of your team<p>
 Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
-
 Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.
 </p>
 
 <p><span id="k">CV</span>  - Freelance Marketing:</p>
 <p>May 2022 - Present: <a href="https://lootlabs.xyz">Loot labs Inc</a></p>
-    <p>Until Now succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
+    <p>Until now i have succesfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg"> boxed.gg</a>, a trading card website.</p>
 <p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” Millan Harris CEO - <a href="https://lootlabs.xyz"> Loot Labs Inc</a></p>
 <p>Mar 2022 - Apr 2023:<a href="https://teams.gg"> TEAMS.gg</a></p>
-<p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield - <a href="https://teams.gg"> TEAMS.gg</a></p>
-<p>Build <a href="http://tinyurl.com/542yab44"> 25k monthly organic search traffic</a> through strong SEO fundamentals and blog posts, Google Search Ads CPA $0.14, Youtube Ads CPA $0.25, Grew their <a href="http://discord.gg/teamsgg"> Discord Community</a> from 5k to 30k</p>
-
-<p>I usally waste my time doing cool projects.<br><br><br>If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br>
-</p>
-
-You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.
-
+<p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" James Duffield CEO - <a href="https://teams.gg"> TEAMS.gg</a></p>
+<p>I usally waste my time doing cool projects.<br><br><br>If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br></p>
+<p>You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.</p>
 <p>Cheers!</p>
 <span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Driving Businesses Growth Through Strategic Online Marketing Campaigns</span>
