--- a/rikkz.html
+++ b/rikkz.html
@@ -8,7 +8,7 @@ Gain valuable insights in campaign performance, ROAS and enable data-driven deci
 <span id="k">✓</span> Cross Platform <span id="b">Advertising</span><p>
 I advertise on platforms such as Google, TikTok, Meta, X, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.
 </p>
-<span id="k">✓</span> Part of your <span id="b">team</span><p>
+<span id="k">✓</span> Part of your <span id="b">Team</span><p>
 Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
 Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.
 </p>
