--- a/emperor.html
+++ b/emperor.html
@@ -19,7 +19,7 @@ Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to you
 <p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” <a href="https://www.linkedin.com/in/milanharrisdev/">Millan Harris CEO</a> - <a href="https://lootlabs.xyz"> Loot Labs Inc</a></p>
 <p>Mar 2022 - Apr 2023:<a href="https://teams.gg"> TEAMS.gg</a></p>
 <p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" <a href="https://www.linkedin.com/in/jamesduffield/">James Duffield CEO</a> - <a href="https://teams.gg"> TEAMS.gg</a></p>
-<p>I only spend my time doing cool projects. If you want to get connect, you can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/rikvervoort/">LinkedIn</a> <br></p>
+<p>I only spend my time doing cool projects. If you want to get connected, you can visit my LinkedIn, <a href="https://www.linkedin.com/in/rikvervoort/">here</a> <br></p>
 <p>You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.</p>
 <p>Cheers!</p>
 <span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Driving Businesses Growth Through Strategic Online Marketing Campaigns</span>
