--- a/emperor.html
+++ b/emperor.html
@@ -1,7 +1,7 @@
 "<span id="k">Hey there champ! Nice to see you here.</span>"
 
-<p>My name is Rik Vervoort, I'm a Online <span id="b">Marketeer</span>.</p>
-<p>I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>
+<p>My name is Rik Vervoort, I'm a Online <span id="b">Marketeer</span>.<br>
+    I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>    
 <span id="k">✓</span> Analytics & <span id="b">Data</span><p>
 Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.
 </p>
