--- a/emperor.html
+++ b/emperor.html
@@ -1,21 +1,21 @@
 "<span id="k">Hey there champ! Nice to see you here.</span>"
 
-<p>My name is Rik Vervoort, I'm a Online <span id="b">Marketeer</span>.<br>
-    I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>    
-    <span id="k">✓</span> Analytics & <span id="b">Data</span><br>
-    <p>Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.</p>
-    <span id="k">✓</span> Cross Platform <span id="b">Advertising</span><br>
-    <p>I advertise on platforms such as Google, TikTok, Meta, X, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.</p>
-    <span id="k">✓</span> Part of your <span id="b">Team</span><br>
-    <p>Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
-    Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.</p>  
-    <p><span id="k">CV</span> - Freelance <span id="b">Marketing</span>:</p>
-    <p>May 2023 - Present: <a href="https://lootlabs.xyz">Loot labs Inc</a></p>
-    <p>Until now I have successfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg">boxed.gg</a>, a trading card website.</p>
-    <p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” <a href="https://www.linkedin.com/in/milanharrisdev/">Millan Harris CEO</a> - <a href="https://lootlabs.xyz">Loot Labs Inc</a>.</p>
-    <p>Mar 2022 - Apr 2023: <a href="https://teams.gg">TEAMS.gg</a></p>
-    <p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" <a href="https://www.linkedin.com/in/jamesduffield/">James Duffield CEO</a> - <a href="https://teams.gg">TEAMS.gg</a>.</p>
-    <p>I only spend my time doing cool projects. If you want to get connected, you can visit my LinkedIn, <a href="https://www.linkedin.com/in/rikvervoort/">here</a>.</p>
-    <p>You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.</p>
-    <p>Cheers!</p>
-    <span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Driving Businesses Growth Through Strategic Online Marketing Campaigns</span>
+<p>My name is Rik Vervoort, I'm a Online <span id="b">Marketeer</span>.
+I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>    
+<span id="k">✓</span> Analytics & <span id="b">Data</span>
+<p>Gain valuable insights in campaign performance, ROAS and enable data-driven decisions to optimize strategies and drive success. I’ll work endlessly on hitting the right KPIs for you.</p>
+<span id="k">✓</span> Cross Platform <span id="b">Advertising</span>
+<p>I advertise on platforms such as Google, TikTok, Meta, X, and any other platform that suits your business, to maximize your brand’s online visibility and reach diverse audiences.</p>
+<span id="k">✓</span> Part of your <span id="b">Team</span>
+<p>Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
+Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.</p>  
+<p><span id="k">CV</span> - Freelance <span id="b">Marketing</span>:</p>
+<p>May 2023 - Present: <a href="https://lootlabs.xyz">Loot labs Inc</a></p>
+<p>Until now I have successfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg">boxed.gg</a>, a trading card website.</p>
+<p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” <a href="https://www.linkedin.com/in/milanharrisdev/">Millan Harris CEO</a> - <a href="https://lootlabs.xyz">Loot Labs Inc</a>.</p>
+<p>Mar 2022 - Apr 2023: <a href="https://teams.gg">TEAMS.gg</a></p>
+<p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" <a href="https://www.linkedin.com/in/jamesduffield/">James Duffield CEO</a> - <a href="https://teams.gg">TEAMS.gg</a>.</p>
+<p>I only spend my time doing cool projects. If you want to get connected, you can visit my LinkedIn, <a href="https://www.linkedin.com/in/rikvervoort/">here</a>.</p>
+<p>You can also contact me through email, feel free to send me an email at <a href="mailto:rikervoort@gmail.com">rikvervoort@gmail.com</a>.</p>
+<p>Cheers!</p>
+<span id="a">RV - Online Marketing</span>:<span id="b">~</span><span id="c">/Driving Businesses Growth Through Strategic Online Marketing Campaigns</span>
