--- a/emperor.html
+++ b/emperor.html
@@ -10,8 +10,7 @@ I specialize in helping businesses scale revenue through paid advertising. I can
 <p>Prioritizing a seamless fit within your team, and my responsiveness on communication channels guarantees effective collaboration to achieve our shared goals.
 Slack, Discord, Gather Town, Microsoft Teams. I am flexible and adaptable to your preferences and needs.</p>  
 <p><span id="k">CV</span> - Freelance <span id="b">Marketing</span>:</p>
-<p>May 2023 - Present: <a href="https://lootlabs.xyz">Loot labs Inc</a></p>
-<p>Until now I have successfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg">boxed.gg</a>, a trading card website.</p>
+<p>May 2023 - Present: <a href="https://lootlabs.xyz">Loot labs Inc</a></p><p>Until now I have successfully delivered a ROAS of 600% with a 300k+ budget in 2023 on their new brand <a href="https://boxed.gg">boxed.gg</a>, a trading card website.</p>
 <p><span id="b">Review</span>: “Meticulous with data, consistently providing comprehensive data and well-organized spreadsheets. Outstanding attention to detail and efficiency.” <a href="https://www.linkedin.com/in/milanharrisdev/">Millan Harris CEO</a> - <a href="https://lootlabs.xyz">Loot Labs Inc</a>.</p>
 <p>Mar 2022 - Apr 2023: <a href="https://teams.gg">TEAMS.gg</a></p>
 <p><span id="b">Review</span>: "You’ve been a huge part of driving activity up 300% YoY on TEAMS. Loved working with you. It’s been a pleasure experimenting, testing and learning how to best reach new players. Whoever you work with next will be lucky to have you! 🚀🚀🚀" <a href="https://www.linkedin.com/in/jamesduffield/">James Duffield CEO</a> - <a href="https://teams.gg">TEAMS.gg</a>.</p>
