--- a/emperor.html
+++ b/emperor.html
@@ -1,4 +1,4 @@
-"<span id="k">Hey there champ! Nice to see you here.</span>"
+"<span id="k">Hey there champ!</span>, nice to see you here."
 
 <p>My name is Rik Vervoort, I'm a Online <span id="b">Marketeer</span>.
 I specialize in helping businesses scale revenue through paid advertising. I can help you get the most out of your campaign budget by optimizing campaigns to maximize results.</p>    
